@@ -49,6 +49,7 @@ All other changes:
 - Improved: "Factor purchase to stock unit" was moved to quantity units category in master product
 - Improved: When scanning a product barcode and the purchase or inventory page, the note will now
   also be prefilled from the barcode (was option before, but server v4 has that behavior now) (#644)
+- Improved: It is now clearer which QR code is to be scanned when using Home Assistant (#627)
 - Fixed: Amounts with conversions are consistent over all pages now (#612, #626)
 - Fixed: Long click on barcode button on overview page was broken on Android Nougat and lower
 - Fixed: Crash on startup with Android Lollipop (and maybe higher)
